# packages

admin/autoupdater/src/: CMakeLists.txt  autoupdater.c
net/uradvd/src/: uradvd.c
